fix: improve name package remote

--- a/apps/host-ui/tsconfig.app.json
+++ b/apps/host-ui/tsconfig.app.json
@@ -4,14 +4,8 @@
     "outDir": "dist",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
     "jsx": "react-jsx",
-    "lib": [
-      "dom"
-    ],
-    "types": [
-      "node",
-      "@nx/react/typings/cssmodule.d.ts",
-      "@nx/react/typings/image.d.ts"
-    ],
+    "lib": ["dom"],
+    "types": ["node", "@nx/react/typings/cssmodule.d.ts", "@nx/react/typings/image.d.ts"],
     "rootDir": "src",
     "module": "esnext",
     "moduleResolution": "bundler"
@@ -37,5 +31,10 @@
     "src/**/*.jsx",
     "src/**/*.ts",
     "src/**/*.tsx"
+  ],
+  "references": [
+    {
+      "path": "../../modules/point/frontend/tsconfig.app.json"
+    }
   ]
 }
