--- a/apps/host-ui/tsconfig.json
+++ b/apps/host-ui/tsconfig.json
@@ -3,6 +3,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../modules/point/frontend"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
