--- a/modules/point/backend/package.json
+++ b/modules/point/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@modules/point/backend",
+  "name": "@modules/point_backend",
   "version": "0.0.1",
   "private": true,
   "main": "./src/index.ts",
