--- a/apps/host-ui/project.json
+++ b/apps/host-ui/project.json
@@ -17,7 +17,12 @@
       "dependsOn": [
         "^build",
         "typecheck"
-      ]
+      ],
+      "configurations":{
+        "production": {
+          "config": "rspack.config.prod.ts"
+        }
+      }
     }
   }
 }
