--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,18 @@
 server {
     listen 80;
     server_name localhost;
- 
+
     location / {
         root /usr/share/nginx/html/host;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html;   
     }
- 
+
     location /point/ {
         alias /usr/share/nginx/html/point/;
-        try_files $uri $uri/ /point/index.html;  
+        try_files $uri $uri/ =404;   
     }
- 
+
     location = /point/remoteEntry.js {
         alias /usr/share/nginx/html/point/remoteEntry.js;
-    }
- 
-    location /point/index.html {
-        alias /usr/share/nginx/html/point/index.html;
     }
 }
